@@ -4,18 +4,8 @@
 https://user-images.githubusercontent.com/29891200/120114578-0774c580-c180-11eb-96e5-a36732cae6a1.mp4
 
 
--Video zeigt Grundfunktionen (30.05.2021) </br>
--Dokumentation PDF liegt im root (Master-Branch)
+-Video shows Basiscfunctions (30.05.2021) </br>
+-Documentation available in root (Master-Branch)
 
 <h2>How to make it run</h2>
--	Java 14 oder 16 installieren <br>
-    o	14 auf Linux getestet, 16 auf Windows getestet</br>
--	Pull https://github.com/LaaKii/AlgorithmVisualizer/tree/master </br>
-o	masterpath</br>
--	In IntelliJ öffnen</br>
--	Start Application (Main)</br>
--	(SOLLTE AUCH OHNE DIE FOLGENEN SCHRITTEN FUNKTIONIEREN)</br>
-o	Wenn nicht startet, muss evtl. noch:</br>
-	JavaFx sdk installiert werden (javafx-sdk-15.0.1)</br>
-	Folgendes in Run Configuration eintragen:</br>
-•	--module-path /home/dev/dev/openjfx-15.0.1_linux-x64_bin-sdk/javafx-sdk-15.0.1/lib --add-modules javafx.controls,javafx.fxml</br>
+Basically just pull / download it
